사이드바 메뉴 설정하기

--- a/_posts/2022-04-21-test2.md
+++ b/_posts/2022-04-21-test2.md
@@ -1,13 +1,68 @@
 ---
 layout: single
-title:  "Test 글입니다!!"
-categories : Test1
+title:  "첫 블로그 글입니다!!"
+categories : HTML
+tag : [python, blog, jekyll, test]
+toc : true
+toc_sticky : true
+author_profile : true
+sidebar_main : true
 ---
 
+# 와우~
+
+처음 포스팅한 글입니다.
+
+연습중!!!
+
+이미지 올리기!!!
+
+```python
+class <ClassName>:
+
+    <class_attribute_name> = <value>
+
+    def __init__(self,<param1>, <param2>, ...):
+        self.<attr1> = <param1>
+        self.<attr2> = <param2>
+        .
+        .
+        .
+        # As many attributes as needed
+    
+   def <method_name>(self, <param1>, ...):
+       <code>
+       
+   # As many methods as needed
+```
 
 
 
 
 
+**실시간으로 반영되는 것을 볼 수 있나요???**
 
-테스트중인 포스트입니다.
+ㅇㅇㅇㅇㅇㅇㅇㅇㅇ
+
+## 이미지 목차
+
+### 이미지 세부 목차1
+
+이미지입니다.
+
+### 이미지 세부 목차2
+
+이미지입니다.
+
+### 이미지 세부 목차3
+
+이미지입니다.
+
+### 이미지 세부 목차4
+
+간단하죠? ㅎ
+
+![20220402_191739](../../images/2022-04-02-first/20220402_191739.png)
+
+다른 이미지도 올려봅시다.
+
