--- a/_posts/2022-05-02-test1.md
+++ b/_posts/2022-05-02-test1.md
@@ -1,16 +1,21 @@
 ---
 layout: single
 title:  "첫 블로그 글입니다!!"
-categories : Test2
+categories : DataStructure
+tag : [python, blog, jekyll, test]
+toc : true
+toc_sticky : true
+author_profile : true
+sidebar_main : true
 ---
+
+# 와우~
 
 처음 포스팅한 글입니다.
 
 연습중!!!
 
 이미지 올리기!!!
-
-
 
 ```python
 class <ClassName>:
@@ -39,7 +44,23 @@ class <ClassName>:
 
 ㅇㅇㅇㅇㅇㅇㅇㅇㅇ
 
-ㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁ
+## 이미지 목차
+
+### 이미지 세부 목차1
+
+이미지입니다.
+
+### 이미지 세부 목차2
+
+이미지입니다.
+
+### 이미지 세부 목차3
+
+이미지입니다.
+
+### 이미지 세부 목차4
+
+간단하죠? ㅎ
 
 ![20220402_191739](../../images/2022-04-02-first/20220402_191739.png)
 
