--- a/_posts/2022-05-14-test8.md
+++ b/_posts/2022-05-14-test8.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title:  "첫 블로그 글입니다!!"
-categories : Algorithm
+categories : BOJ
 tag : [python, blog, jekyll, test]
 toc : true
 toc_sticky : true
