--- a/_posts/2022-05-21-test.md
+++ b/_posts/2022-05-21-test.md
@@ -1,13 +1,33 @@
 ---
 layout: single
-title:  "첫 블로그 글입니다!!!!"
+title:  "검색용 테스트 글!!!!"
 categories : C
 tag : [python, blog, jekyll, test]
 toc : true
 toc_sticky : true
 author_profile : true
 sidebar_main : true
+search : true
 ---
+
+**[공지사항]** [지킬블로그 신규 업데이트 안내 드립니다.](https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/)
+{: .notice}
+
+<div class= "notice--info">
+    <b>공지사항입니다!!</b>
+    <hr>
+    <ul>
+        <li>공지사항 순서1</li>
+        <li>공지사항 순서2</li>
+        <li>공지사항 순서3</li>
+    </ul>
+</div>
+
+[버튼입니다](http://jkc-mycode.github.io){: .btn .btn--info}
+
+
+{% include video id="mb-Cnwi9BqA" provider="youtube" %}
+
 
 # 와우~
 
